Fixed wrapping issue of skill icons

--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -27,6 +27,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 11px;
+    align-self: flex-start
 }
 
 .skill {
